tyro rural website

--- a/index.html
+++ b/index.html
@@ -38,19 +38,18 @@
       </style>
   </head>
   <body>
-    <div class="quotes">
-    <section id="hero" class="d-flex align-items-center" >
-        <video autoplay loop muted play-inline class=" video" width="110%" height="100%" padding="0" margin="0">
-            <source src="image/back-video.mp4" type="video/mp4">
-        </video>
-        <div class="container text-center ">
+    <header class="outer-contsiner">
+      <div class="video-container">
+        <video class="video" src="image/video.mp4" type="video/mp4" autoplay loop muted></video>
+      </div>
+      <div class="overlay"></div>
+      <div class="text">
         <h1 >Rural Rise</h1>
-         <h5>HOPE BEYOND HARDSHIP</h5>
-         <button class=" btn btn_get_started shadow-none"data-bs-toggle="modal" data-bs-target="#exampleModalToggle" >Explore More</button>
-          
-          </div>
-    </section>
-    </div>
+        <h5>HOPE BEYOND HARDSHIP</h5>
+        <button class=" btn  shadow-none"data-bs-toggle="modal" data-bs-target="#exampleModalToggle" >Explore More</button>
+
+      </div>
+    </header>
 
 <!-- Modal -->
 <div class="modal fade" id="exampleModalToggle" aria-hidden="true" aria-labelledby="exampleModalToggleLabel" tabindex="-1">
